--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 springdoc.swagger-ui.path=/swagger-ui-custom.html
+#server.port=8888
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,health,metrics
+management.endpoints.web.base-path=/actuator
+management.endpoints.prefix=myapp
+
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=false
+
+management.endpoint.shutdown.enabled=false
+management.endpoints.shutdown.sensitive=true
+management.endpoint.health.roles=ACTUATOR_ADMIN
+
+
