--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,10 @@
             <artifactId>spring-boot-actuator</artifactId>
             <version>3.1.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
         <plugins>
